--- a/TODO.txt
+++ b/TODO.txt
@@ -1,22 +1,14 @@
-Bugs
-====
-* Negative numbers in arrays (the minus symbol conflicts with the context)
-	* Possible solutions: 
-		* Use a * for context √ (done, but I don't like it)
-		* Change the grammar
-
-
 Features
 ========
-* Improve debugging output with a line and char position
-* Implement ron/main.m
-* Add parsing/writing options and methods from NSJSONSerialization
-* Replace NSScanner with a streaming scanner (the current implementation is sucky for large files)
+- Improve debugging output with a line and char position
+- Implement ron/main.m
+- Add parsing/writing options and methods from NSJSONSerialization
+- Replace NSScanner with a streaming scanner (the current implementation is sucky for large files)
 
 
 Ideas (i.e. possible TODOs)
 ===========================
-* Add =* to the grammar so that it can be used to underline words and create pseudo headings
+- Add =- to the grammar so that it can be used to underline words and create pseudo headings
 
-* Augment context terminator, -, with + to allow - in keys
-	* What does mark down use for lists items?
+- Augment context terminator, -, with + to allow - in keys
+	- What does mark down use for lists items?
